@@ -428,7 +428,7 @@ class ReleaseRemover
 			case ReleaseSearch::SPHINX:
 				$rs = new ReleaseSearch($this->pdo);
 				$execFT =
-					str_replace('=10000;', '=1000000;',
+					str_replace('=10000;', '=100000;',
 						$rs->getSearchSQL(
 							[
 								'searchname' => '-exes* -exec*',
@@ -482,7 +482,7 @@ class ReleaseRemover
 		switch (nZEDb_RELEASE_SEARCH_TYPE) {
 			case ReleaseSearch::SPHINX:
 				$rs = new ReleaseSearch($this->pdo);
-				$instbinFT = str_replace('=10000;', '=10000000;', $rs->getSearchSQL(['filename' => 'install<<bin']));
+				$instbinFT = str_replace('=10000;', '=100000;', $rs->getSearchSQL(['filename' => 'install<<bin']));
 				$ftJoin = $rs->getFullTextJoinString();
 				break;
 			default:
@@ -677,7 +677,7 @@ class ReleaseRemover
 		switch (nZEDb_RELEASE_SEARCH_TYPE) {
 			case ReleaseSearch::SPHINX:
 				$rs = new ReleaseSearch($this->pdo);
-				$sampleFT = str_replace('=10000;', '=10000000;', $rs->getSearchSQL(['name' => 'sample']));
+				$sampleFT = str_replace('=10000;', '=100000;', $rs->getSearchSQL(['name' => 'sample']));
 				$ftJoin = $rs->getFullTextJoinString();
 				break;
 			default:
