@@ -8,8 +8,9 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
-
-2016-11-05 ruhllatio
+2016-11-07 b3rs3rk
+	Fix: Issue with SphinxSE 2.2.11 and maximum return size in ReleaseRemover with larger DB
+2016-11-05 b3rs3rk
 	Fix: nZEDb.xml file with new DB patch number
 2016-11-04 DariusIII
 	Chg: Replace reqid.nzedb.com with reqid.newznab-tmux.pw
